# fxts2_mass_backtester

./: BUILD_README.md  CMakeLists.txt  Makefile  README.md  TEST_README.md  build.bat  run_tests.bat  run_tests.sh
sample_symbol_info/EURUSD/: info.json  info_no_provider.json
sample_symbol_info/GBPUSD/: info.json
src/: BacktestProject.h  BacktestProjectSerializer.cpp  BacktestProjectSerializer.h  ConsoleBacktester.cpp  ConsoleBacktester.h  DatesIterator.cpp  DatesIterator.h  IndicoreRatesSerializer.cpp  IndicoreRatesSerializer.h  RatesStorageProvider.cpp  RatesStorageProvider.h  StorageReader.cpp  StorageReader.h  SymbolInfoParser.cpp  SymbolInfoParser.h  main.cpp
tests/: test_BacktestProjectSerializer.cpp  test_DatesIterator.cpp  test_IndicoreRatesSerializer.cpp  test_StorageReader.cpp  test_SymbolInfoParser.cpp
